2025-03-12  Sean  Whitton <spwhitton@spwhitton.name>

	* tramp-message.el (tramp-debug-font-lock-keywords): Say "Lisp"
	not "Elisp".

2025-03-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el: Add Version, Package-Requires, Package-Type and URL
	keywords.

2025-02-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-mode): Set to nil on MS-DOS.

2025-02-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-list-remote-buffers)
	(tramp-list-remote-buffer-connections): Fix docstring.
	(tramp-cleanup-bufferless-connections): Use `string-join'.

	* tramp-sh.el (tramp-ssh-or-plink-options): Return always a
	string.  (Bug#76553)

2025-02-25  shipmints  <shipmints@gmail.com>

	* tramp-cmds.el:
	(tramp-list-remote-buffer-connections): New function.
	(tramp-cleanup-bufferless-connections): New command.
	(tramp-list-remote-buffers): Account for 'buffer-file-name'.

2025-02-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-executable): Use "command -pv", it
	better supported in different shells.  (Bug#76521)

2025-02-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-executable): Fix check.

2025-02-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (with-tramp-saved-connection-property): Fix typo.

	* tramp-compat.el: Add TODO.

	* tramp-sh.el (tramp-find-executable): Simplify, using "type -P ...".
	(tramp-set-remote-path): Better handling of superlong $PATH.
	(tramp-get-remote-path): Adapt/use connection properties.

2025-02-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): Don't touch `tramp-verbose'.

	* tramp-cache.el (with-tramp-saved-connection-properties):
	Adapt `tramp-verbose' when completing host names.

	* tramp-sh.el (tramp-methods) <plink, plinkx, pscp, psftp>:
	Adapt `tramp-login-args' and `tramp-copy-args' arguments.
	(tramp-plink-option-exists-p): New defun.
	(tramp-ssh-or-plink-options): Rename from