@@ -556,7 +556,8 @@ see its function help for a description of the format."
 		(tramp-direct-async (,tramp-default-remote-shell "-c"))
                 (tramp-remote-shell ,tramp-default-remote-shell)
                 (tramp-remote-shell-login ("-l"))
-                (tramp-remote-shell-args ("-i" "-c"))))
+                (tramp-remote-shell-args ("-i" "-c"))
+		(tramp-completion-use-cache nil)))
 
  (add-to-list 'tramp-methods
               `(,tramp-dockercp-method
@@ -573,7 +574,8 @@ see its function help for a description of the format."
 		(tramp-copy-program ,tramp-docker-program)
 		(tramp-copy-args (("cp")))
 		(tramp-copy-file-name (("%h" ":") ("%f")))
-                (tramp-copy-recursive t)))
+                (tramp-copy-recursive t)
+		(tramp-completion-use-cache nil)))
 
  (add-to-list 'tramp-methods
               `(,tramp-podman-method
@@ -586,7 +588,8 @@ see its function help for a description of the format."
 		(tramp-direct-async (,tramp-default-remote-shell "-c"))
                 (tramp-remote-shell ,tramp-default-remote-shell)
                 (tramp-remote-shell-login ("-l"))
-                (tramp-remote-shell-args ("-i" "-c"))))
+                (tramp-remote-shell-args ("-i" "-c"))
+		(tramp-completion-use-cache nil)))
 
  (add-to-list 'tramp-methods
               `(,tramp-podmancp-method
@@ -603,7 +606,8 @@ see its function help for a description of the format."
 		(tramp-copy-program ,tramp-podman-program)
 		(tramp-copy-args (("cp")))
 		(tramp-copy-file-name (("%h" ":") ("%f")))
-                (tramp-copy-recursive t)))
+                (tramp-copy-recursive t)
+		(tramp-completion-use-cache nil)))
 
  (add-to-list 'tramp-methods
               `(,tramp-kubernetes-method
@@ -618,7 +622,8 @@ see its function help for a description of the format."
 		(tramp-direct-async (,tramp-default-remote-shell "-c"))
                 (tramp-remote-shell ,tramp-default-remote-shell)
                 (tramp-remote-shell-login ("-l"))
-                (tramp-remote-shell-args ("-i" "-c"))))
+                (tramp-remote-shell-args ("-i" "-c"))
+		(tramp-completion-use-cache nil)))
 
  (add-to-list 'tramp-completion-multi-hop-methods tramp-docker-method)
  (add-to-list 'tramp-completion-multi-hop-methods tramp-podman-method)
@@ -674,7 +679,8 @@ see its function help for a description of the format."
 		 (tramp-direct-async (,tramp-default-remote-shell "-c"))
 		 (tramp-remote-shell ,tramp-default-remote-shell)
 		 (tramp-remote-shell-login ("-l"))
-		 (tramp-remote-shell-args ("-c"))))
+		 (tramp-remote-shell-args ("-c"))
+		 (tramp-completion-use-cache nil)))
 
   (add-to-list 'tramp-default-host-alist `(,tramp-toolbox-method nil ""))
   (add-to-list 'tramp-completion-multi-hop-methods tramp-toolbox-method)
@@ -695,7 +701,8 @@ see its function help for a description of the format."
 		 ;(tramp-direct-async (,tramp-default-remote-shell "-c"))
 		 (tramp-remote-shell ,tramp-default-remote-shell)
 		 (tramp-remote-shell-login ("-l"))
-		 (tramp-remote-shell-args ("-c"))))
+		 (tramp-remote-shell-args ("-c"))
+		 (tramp-completion-use-cache nil)))
 
   (add-to-list 'tramp-completion-multi-hop-methods tramp-distrobox-method)
 
@@ -719,7 +726,8 @@ see its function help for a description of the format."
 		 (tramp-direct-async (,tramp-default-remote-shell "-c"))
 		 (tramp-remote-shell ,tramp-default-remote-shell)
 		 (tramp-remote-shell-login ("-l"))
-		 (tramp-remote-shell-args ("-c"))))
+		 (tramp-remote-shell-args ("-c"))
+		 (tramp-completion-use-cache nil)))
 
   (add-to-list 'tramp-completion-multi-hop-methods tramp-flatpak-method)
 
@@ -750,7 +758,8 @@ see its function help for a description of the format."
 				    ("%h"))) ; Needed for multi-hop check.
 		 (tramp-remote-shell ,tramp-default-remote-shell)
 		 (tramp-remote-shell-login ("-l"))
-		 (tramp-remote-shell-args ("-c"))))
+		 (tramp-remote-shell-args ("-c"))
+		 (tramp-completion-use-cache nil)))
 
   (add-to-list 'tramp-completion-multi-hop-methods tramp-apptainer-method)
 
@@ -771,7 +780,8 @@ see its function help for a description of the format."
 				    ("%h")))
 		 (tramp-remote-shell ,tramp-default-remote-shell)
 		 (tramp-remote-shell-login ("-l"))
-		 (tramp-remote-shell-args ("-i" "-c"))))
+		 (tramp-remote-shell-args ("-i" "-c"))
+		 (tramp-completion-use-cache nil)))
 
   (add-to-list 'tramp-default-host-alist `(,tramp-nspawn-method nil ".host"))
   (add-to-list 'tramp-completion-multi-hop-methods tramp-nspawn-method)
